--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -7,5 +7,6 @@
     </label>
   </div>
 
+  <button class="" (click)="save()">Save</button>
   <button class="" (click)="goBack()">Go back</button>
 </div>
